fix: add 5rem margin and disable text wrapping for code blocks

--- a/pilot/src/styles/code-block.css
+++ b/pilot/src/styles/code-block.css
@@ -1,5 +1,5 @@
 .code-block {
-  margin: 0;
+  margin: 5rem;
   background: transparent !important;
   padding: 0 !important;
   width: 100%;
@@ -11,7 +11,7 @@
 }
 
 .code-block code {
-  white-space: pre;
+  white-space: nowrap;
   tab-size: 2;
   background: transparent;
   font-family: inherit;
